# ha-archive-search

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
Dockerfile docker/: docker-compose.yml
docker/: Dockerfile  docker-compose.synology.yml  docker-compose.yml
docs/: RELEASE_0_2_0.md  RELEASE_0_3_0.md  contrat_moteur_cli.md  contrat_webapp.md  vision_domaine.md
src/ha_archive_search/: __init__.py  engine.py  webapp.py
src/ha_archive_search/templates/: index.html
tests/: test_webapp_html.py  test_webapp_markdown.py  test_webapp_parser.py
